Fix HTML structure and update title

--- a/index.htlm.html
+++ b/index.htlm.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pluie de cartes</title>
+  <title>la petit famille prio </title>
 
   <style>
     /* --- STYLE GLOBAL --- */
@@ -113,7 +113,7 @@
 
   <h1>Bienvenue dans notre UAP</h1>
 
-  <h2> <a href="http://localhost:63342/uap/notre%20UAP.html?_ijt=81i09jhm8ul4lm0rbqukdl5ael&_ij_reload=RELOAD_ON_SAVE"style="text-decoration: none; color: inherit">La petite famille prio </a></h2>
+  <h2> <a href="https://github.com/severine2308/uap4/edit/main/index.htlm"style="text-decoration: none; color: inherit">La petite famille prio </a></h2>
 
   <div class="galerie">
     <img src="https://2.bp.blogspot.com/-AbNnRCv8tl0/UqNZ5A-d13I/AAAAAAAALO0/atN7bg7L6aE/s1600/5957153-roi-de-pique-de-cartes-a-jouer.jpg" alt="Roi de pique">
@@ -185,4 +185,5 @@
   </script>
 
 </body>
+
 </html>
