Fix HTML structure and update video links

--- a/index.htlm.html
+++ b/index.htlm.html
@@ -113,7 +113,7 @@
 
   <h1>Bienvenue dans notre UAP</h1>
 
-  <h2> <a href="https://github.com/severine2308/uap4/edit/main/index.htlm"style="text-decoration: none; color: inherit">La petite famille prio </a></h2>
+  <h2> <a href="https://severine2308.github.io/uap4/index.htlm"style="text-decoration: none; color: inherit">La petite famille prio </a></h2>
 
   <div class="galerie">
     <img src="https://2.bp.blogspot.com/-AbNnRCv8tl0/UqNZ5A-d13I/AAAAAAAALO0/atN7bg7L6aE/s1600/5957153-roi-de-pique-de-cartes-a-jouer.jpg" alt="Roi de pique">
@@ -187,3 +187,4 @@
 </body>
 
 </html>
+
